# ocaml-swagger

./: swagger.opam
src/: dune  gen.ml  mod.ml  mod.mli  type.ml  type.mli  type_info.ml  val.ml  val.mli
