(rule
 (targets swagger_j.ml swagger_j.mli)
 (deps    swagger.atd)
 (action  (run atdgen -j %{deps})))

(rule
 (targets swagger_t.ml swagger_t.mli)
 (deps    swagger.atd)
 (action  (run atdgen -t %{deps})))

(library
 (name swagger)
 (public_name swagger)
 (libraries atdgen re.pcre yojson ocaml-migrate-parsetree)
 (preprocess (pps ppx_tools_versioned.metaquot_406)))
